--- a/sass/components/_cta.scss
+++ b/sass/components/_cta.scss
@@ -12,6 +12,10 @@
     &__separator {
         margin-inline: 1rem;
         display: inline-block;
+
+        @include abs.for-desktop-up {
+            margin-inline: .5rem;
+        }
     }
 
     &--desktop {
